🚀 Fix Railway deployment: Simplify Docker and add start script
- Simplified Dockerfile (removed user management and health checks)
- Added dedicated start.js script for Railway
- Updated railway.toml with proper start command
- Should resolve Docker build failures

--- a/railway.toml
+++ b/railway.toml
@@ -2,5 +2,5 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "node server.js"
+startCommand = "npm install && node start.js"
 workingDirectory = "backend"
